--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Welcome to the Tropo Reminder Demo
+= Welcome to the Tropo Reminder Demo
 
 This is a Tropo application designed to demonstrate building a reminder application using both Voice and SMS alerts.  The application will place an outbound reminder call to you 1 week in advance and then 1 day in advance and an SMS message 1 hour in advance of your appointment time.
 
